--- a/src/content/graphos/metrics/operations.mdx
+++ b/src/content/graphos/metrics/operations.mdx
@@ -73,7 +73,7 @@ You can adjust the overview's timeframe and filter by client in the top right co
 By default, the left sidebar shows a paginated list of all operations, but you can use it to hone in on certain ones.
 Specifically, you can:
 
-- Search for a particular operation by its name or fields' names
+- Search for a particular operation by its name
 - Filter operations by their type (queries, mutations, subscriptions) or whether they are unregistered or unnamed
 
 <img
@@ -285,7 +285,7 @@ Below the client usage information, you can see the same [operation metrics](#op
 
 ### Subscription metrics
 
-If you view a specific subscription's detail page, you see charts containing only data about that subscription.These include all the [subscription notification metrics](#operation-metrics) shown in the operations overview. A subscription's detail page shows subscription registration metrics instead of the request metrics on the operations overview.
+If you view a specific subscription's detail page, you see charts containing only data about that subscription. These include all the [subscription notification metrics](#operation-metrics) shown in the operations overview. A subscription's detail page shows subscription registration metrics instead of the request metrics on the operations overview.
 
 ### Resolver-level traces
 
