Add note about data retention

--- a/src/content/graphos/metrics/field-usage.mdx
+++ b/src/content/graphos/metrics/field-usage.mdx
@@ -3,6 +3,13 @@ title: Field usage in GraphOS
 description: Understand which fields your clients use
 ---
 
+<Note>
+
+The retention period for field usage metrics depends on your [plan](../org/plans).
+Refer to the [pricing page](https://www.apollographql.com/pricing#data-retention) for details.
+
+</Note>
+
 You can analyze the [field metrics sent by your graph](./sending-operation-metrics/#reporting-field-usage) to GraphOS from any variant's **Insights** page in [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content):
 
 <img
