--- a/src/content/graphos/metrics/operations.mdx
+++ b/src/content/graphos/metrics/operations.mdx
@@ -3,6 +3,13 @@ title: Operation metrics in GraphOS
 description: Understand your operation metrics, including request rate and latency
 ---
 
+<Note>
+
+The retention period for operation metrics depends on your [plan](../org/plans).
+Refer to the [pricing page](https://www.apollographql.com/pricing#data-retention) for details.
+
+</Note>
+
 Once you've configured your graph to send [operation metrics to GraphOS](./sending-operation-metrics/), you can view them in [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content) from any variant's **Insights** page:
 
 <img
