--- a/src/content/graphos/metrics/field-usage.mdx
+++ b/src/content/graphos/metrics/field-usage.mdx
@@ -1,6 +1,6 @@
 ---
 title: Field usage in GraphOS
-description: Understand which fields your clients use
+description: Understand field usage metrics including which clients request which fields and how often
 ---
 
 <Note>
@@ -20,10 +20,10 @@ You can analyze the [field metrics sent by your graph](./sending-operation-metri
 
 The Insights page presents operation and field metrics. It has two main sections:
 
-- The **collapsible left sidebar**. Search, filter, and sort operations and fields.
-- The **main insights view**. View either overall operations metrics by default, or field information and usage metrics for a single field selected from the left sidebar.
+- The collapsible left sidebar, where you can search, filter, and sort operations and fields
+- The main insights view, which displays [overall operations metrics](./operations#operation-metrics) by default, or field information and usage metrics for a single field once you select it from the left sidebar
 
-This guide focuses on field metrics accessible from the left sidebar. Refer to [Operation metrics in GraphOS](./operations) for more information on the other metrics on this page, including [resolver-level traces](/operations#resolver-level-traces).
+This guide focuses on field metrics and information. Refer to [Operation metrics in GraphOS](./operations) for more information on the other metrics on this page, including [resolver-level traces](/operations#resolver-level-traces).
 
 ## Field navigation
 
@@ -41,7 +41,7 @@ To hone in on certain fields:
   width="300"
 />
 
-- Sort fields (descending or ascending) by:
+- Sort fields (descending or ascending):
 
   - Alphabetically
   - By total requests (count)
@@ -61,7 +61,7 @@ Click a field name in the sidebar to learn more about its usage.
 
 ## Field details
 
-When you click a field name, you open detailed information for that field in the main insights view. The includes when the field first and last received traffic, any applied [tags](../graphs/federated-graphs/#schema-tagging), and the subgraphs that provide the field.
+When you click a field name, you open detailed information for that field in the main insights view. This includes when the field first and last received traffic, any applied [tags](../graphs/federated-graphs/#schema-tagging), and the subgraphs that provide the field.
 
 Below that, you can view the field definitions within your subgraph schema.
 
@@ -71,7 +71,7 @@ Below that, you can view the field definitions within your subgraph schema.
   alt="Field Insights page"
 />
 
-Next you see which clients and operations contribute to the field's usage. Each row in the the **Clients & Operations** table shows a client that requested the field, the number of operations the client made that used the field, and the total number of requests the client made. Selecting a client shows more details about the operations that requested and executed the field.
+Next, you see which clients and operations contribute to the field's usage. Each row in the **Clients & Operations** table shows a client that requested the field, the number of operations that used the field the client made, and the total number of requests the client made. Selecting a client shows more details about the operations that requested and executed the field.
 
 Below Clients & Operations, you can view visualizations for the field's request rate, latency distribution, and error metrics.
 
@@ -87,7 +87,7 @@ Each row in the **Clients & Operations** table displays some combination of the 
 
 For each of these columns to appear on the Insights page, your GraphQL servers must [report the associated metrics to GraphOS](./sending-operation-metrics#reporting-field-usage). If some but not _all_ of your GraphQL servers report this data, the Insights page presents an incomplete picture of your graph's field usage.
 
-Let's look at these two metrics for an example field:
+Take a look at the **Requests** and **Executions** for an example field:
 
 <img
   src="../img/field-requests-executions.jpg"
@@ -96,7 +96,7 @@ Let's look at these two metrics for an example field:
   width="700"
 />
 
-As you can see, the **requests** and **executions** for a field can differ significantly! There are many possible reasons for this, described below.
+As you can see, they can differ significantly. There are many possible reasons for this, described below.
 
 #### Objects in lists
 
@@ -110,7 +110,7 @@ query GetBooks {
 }
 ```
 
-If `Query.books` returns a list of ten `Book` objects, then `Book.title` is resolved _ten times_. This query therefore contributes just one request but _ten_ executions to the `Book.title` field.
+If `Query.books` returns a list of ten `Book` objects, then `Book.title` is resolved _ten times_. This query, therefore contributes just one request but _ten_ executions to the `Book.title` field.
 
 #### Multiple references to a field
 
@@ -176,7 +176,7 @@ query GetLoggedInUser {
 }
 ```
 
-Now, let's say `Query.loggedInUser` returns `null` because no user is logged in. In this case, the resolver for `User.name` never executes, because its parent retuns `null`. Therefore, this query contributes one request and zero executions for `User.name`.
+Now, let's say `Query.loggedInUser` returns `null` because no user is logged in. In this case, the resolver for `User.name` never executes, because its parent returns `null`. Therefore, this query contributes one request and zero executions for `User.name`.
 
 A requested field might not be resolved for any of these reasons:
 
