--- a/src/content/graphos/metrics/client-awareness.mdx
+++ b/src/content/graphos/metrics/client-awareness.mdx
@@ -3,7 +3,7 @@ title: Segmenting metrics by client
 description: Understand how different clients use your graph
 ---
 
-In GraphOS Studio, you can view GraphQL operation metrics broken down by the different clients that _execute_ those operations (such as your web, iOS, and Android apps). This feature (called **client awareness**) becomes more and more useful as you create additional clients that consume your supergraph.
+In GraphOS Studio, you can view GraphQL operation metrics broken down by the different clients—such as your web, iOS, and Android apps—that execute those operations. This feature, called **client awareness**, becomes increasingly useful as you create additional clients that consume your supergraph.
 
 <Note>
 
@@ -11,7 +11,7 @@ To enable client awareness, your clients must identify themselves in their reque
 
 </Note>
 
-[GraphOS Enterprise](https://www.apollographql.com/pricing) organizations can segment operation metrics even further, by individual client _versions_ (`1.0`, `1.1`, etc.). This helps you track adoption of new versions and identify _older_ versions you can safely deprecate or discontinue.
+[GraphOS Enterprise](https://www.apollographql.com/pricing) organizations can segment operation metrics even further, by individual client _versions_ (`1.0`, `1.1`, etc.). This helps you track the adoption of new versions and identify older versions you can safely deprecate or discontinue.
 
 You view client-segmented metrics from a variant's **Clients** page in Studio:
 
@@ -36,7 +36,7 @@ Your supergraph's router checks for the presence of the following HTTP headers i
 - `apollographql-client-version`
   - Segmenting metrics by client version in Studio requires a [GraphOS Enterprise plan](https://www.apollographql.com/pricing). You can safely include this header in requests regardless of your plan type.
 
-If one or both of these headers are present, your router automatically extracts their values and includes them in the metrics data that it sends to GraphOS.
+If one or both of these headers are present, your router automatically extracts their values and includes them in the metrics data it sends to GraphOS.
 
 **If you're using Apollo Client**, you can populate these headers automatically for every operation request by providing the `name` and `version` options to the `ApolloClient` constructor, like so:
 
@@ -73,4 +73,4 @@ Modifying or removing an existing field in your schema is often a **breaking cha
 
 ### Backend cutover
 
-Changes to your schema often accompany changes to your backend, such as the addition of a new resolver, or even an entirely new data source. When you deploy a new version of your client that executes operations against these new resources, it's important to monitor operations to detect issues. Viewing metrics specific to the new client version helps you identify and resolve these issues quickly.
+Changes to your schema often accompany changes to your backend, such as adding a new resolver, or even an entirely new data source. When you deploy a new version of your client that executes operations against these new resources, it's important to monitor operations to detect issues. Viewing metrics specific to the new client version helps you identify and resolve these issues quickly.
