--- a/src/content/graphos/metrics/field-usage.mdx
+++ b/src/content/graphos/metrics/field-usage.mdx
@@ -1,6 +1,7 @@
 ---
 title: Field usage in GraphOS
-description: Understand field usage metrics including which clients request which fields and how often
+subtitle: Understand field usage metrics including which clients request which fields and how often
+description: Explore field usage metrics in Apollo GraphOS Studio. Analyze field requests and executions to understand your graph's performance.
 ---
 
 <Note>
