--- a/src/content/graphos/metrics/notifications/build-status-notification.mdx
+++ b/src/content/graphos/metrics/notifications/build-status-notification.mdx
@@ -1,6 +1,7 @@
 ---
 title: Build status notifications
-description: Receive webhook alerts whenever GraphOS attempts to build a new supergraph schema
+subtitle: Receive webhook alerts whenever GraphOS attempts to build a new supergraph schema
+description: Configure Apollo GraphOS to notify your team via webhook about schema build attempts in your federated graph.
 ---
 
 <EnterpriseFeature />
