--- a/src/content/graphos/metrics/notifications/notification-setup.mdx
+++ b/src/content/graphos/metrics/notifications/notification-setup.mdx
@@ -1,6 +1,7 @@
 ---
 title: Setting up GraphOS notifications
-description: Set up notifications for your graph's performance, schema changes, and more
+subtitle: Set up notifications for your graph's performance, schema changes, and more
+description: Set up notifications for your graph's performance, schema changes, and more. Stay updated and address issues effectively using custom alerts.
 ---
 
 GraphOS can notify your team about changes to your graph and its performance. These notifications help you stay up to date and address issues as they arise.
