--- a/src/content/graphos/metrics/notifications/performance-alerts.mdx
+++ b/src/content/graphos/metrics/notifications/performance-alerts.mdx
@@ -1,6 +1,7 @@
 ---
 title: Performance alerts from GraphOS Studio
-description: Receive notifications whenever metrics exceed defined thresholds
+subtitle: Receive notifications whenever metrics exceed defined thresholds
+description: Configure alerts to receive notifications in Slack or Pagerduty instance when specific operation metrics surpass defined thresholds.
 ---
 
 <Note>
