--- a/src/content/graphos/metrics/operations.mdx
+++ b/src/content/graphos/metrics/operations.mdx
@@ -1,6 +1,7 @@
 ---
 title: Operation metrics in GraphOS
-description: Understand your operation metrics, including request rate and latency
+subtitle: Understand your operation metrics, including request rate and latency
+description: Apollo GraphOS empowers you to visualize key metrics such as request rate, latency, and more for in-depth performance analysis of your graph.
 ---
 
 <Note>
