--- a/src/content/graphos/metrics/index.mdx
+++ b/src/content/graphos/metrics/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Metrics and insights in GraphOS
-description: Understand your supergraph's usage and performance
+subtitle: Understand your supergraph's usage and performance
+description: Learn how to monitor and optimize your graph's usage and performance with raw metrics, insights, and alerts with Apollo GraphOS.
 ---
 
 GraphOS Studio offers a performant and intuitive UI to help you monitor and understand your supergraph's usage and performance.
