TN0023: Add link to Odyssey course - TN0023 add link to Odyssey course - Update multiple existing tech notes to use Tip and EnterpriseFeature components

--- a/src/content/technotes/TN0002-schema-naming-conventions.mdx
+++ b/src/content/technotes/TN0002-schema-naming-conventions.mdx
@@ -5,9 +5,12 @@ description: Conventions for types, fields, and arguments
 tags: [schema-design]
 ---
 
-> If you're an enterprise customer looking for more material on this topic, try the [Enterprise best practices: Schema design](https://www.apollographql.com/tutorials/schema-design-best-practices) course on Odyssey.
->
-> Not an enterprise customer? [Learn about GraphOS for Enterprise.](/graphos/enterprise)
+<Tip>
+
+If you're an enterprise customer looking for more material on this topic, try the [Enterprise best practices: Schema design](https://www.apollographql.com/tutorials/schema-design-best-practices) course on Odyssey.
+
+Not an enterprise customer? [Learn about GraphOS for Enterprise.](/graphos/enterprise)
+</Tip>
 
 ## Enforcing conventions
 
