TN0024: Added link to Odyssey course

--- a/src/content/technotes/TN0024-deprecations.mdx
+++ b/src/content/technotes/TN0024-deprecations.mdx
@@ -4,6 +4,13 @@ id: TN0024
 tags: [schema-design]
 ---
 
+<Tip>
+
+If you're an enterprise customer looking for more material on this topic, try the [Enterprise best practices: Schema design](https://www.apollographql.com/tutorials/schema-design-best-practices) course on Odyssey.
+
+Not an enterprise customer? [Learn about GraphOS for Enterprise.](/graphos/enterprise)
+</Tip>
+
 ## Leverage SDL and tooling to manage deprecations
 
 Your graph governance group should outline a company-wide field rollover strategy to gracefully handle type and field deprecations throughout the unified graph.
