TN0033: Add Link to Odyssey course - Add link to Odyssey course - Update callouts to Tip component

--- a/src/content/technotes/TN0033-sdui-schema-design.mdx
+++ b/src/content/technotes/TN0033-sdui-schema-design.mdx
@@ -4,9 +4,19 @@ id: TN0033
 tags: [schema-design, server-driven-ui]
 ---
 
+<Tip>
+
+If you're an enterprise customer looking for more material on this topic, try the [Enterprise best practices: Schema design](https://www.apollographql.com/tutorials/schema-design-best-practices) course on Odyssey.
+
+Not an enterprise customer? [Learn about GraphOS for Enterprise.](/graphos/enterprise)
+</Tip>
+
 These patterns provide examples of server-driven UI (SDUI) and how to structure your graph's schema to encode and represent UI elements. Clients can then use platform-specific rendering engines to interpret the schema and generate UI components.
 
-> For more information on SDUI in general, see [Server-driven UI basics](/technotes/TN0032-sdui-basics/).
+<Tip>
+
+For more information on SDUI in general, see [Server-driven UI basics](/technotes/TN0032-sdui-basics/).
+</Tip>
 
 ## Device-based SDUI with enums
 
@@ -51,6 +61,11 @@ type Query {
   app: UIApp!
 }
 ```
+
+<Tip>
+
+Read more on [contracts usage patterns](/technotes/TN0014-contracts-patterns/).
+</Tip>
 
 ## SDUI web dashboard
 
