--- a/src/content/technotes/TN0040-federation-is-not-a-saga-orchestrator.mdx
+++ b/src/content/technotes/TN0040-federation-is-not-a-saga-orchestrator.mdx
@@ -90,3 +90,16 @@ It's tempting to have the orchestrating subgraph resolvers call back to the Apol
 - GraphOS will view these calls as separate operations.
 - If using cloud-native telemetry, you must ensure that the Apollo Router receives the trace context to correlate spans.
 - Be wary of circular dependencies. Consider using [contracts](/graphos/delivery/contracts/) to create variants that expose only the domain-specific mutations and eliminate the potential for loops in an operation.
+
+
+<Tip>
+
+Read more on [contracts usage patterns](/technotes/TN0014-contracts-patterns/).
+</Tip>
+
+<Tip>
+
+If you're an enterprise customer looking for more material on this topic, try the [Enterprise best practices: Contracts](https://www.apollographql.com/tutorials/contracts) course on Odyssey.
+
+Not an enterprise customer? [Learn about GraphOS for Enterprise.](/graphos/enterprise)
+</Tip>
