Add wording to reference tech note

--- a/src/content/technotes/TN0040-federation-is-not-a-saga-orchestrator.mdx
+++ b/src/content/technotes/TN0040-federation-is-not-a-saga-orchestrator.mdx
@@ -94,7 +94,7 @@ It's tempting to have the orchestrating subgraph resolvers call back to the Apol
 
 <Tip>
 
-Read more on [contracts usage patterns](/technotes/TN0014-contracts-patterns/).
+Read more on [contracts usage patterns in this technote](/technotes/TN0014-contracts-patterns/).
 </Tip>
 
 <Tip>
