--- a/src/content/technotes/TN0043-using-graphql-for-abstraction.mdx
+++ b/src/content/technotes/TN0043-using-graphql-for-abstraction.mdx
@@ -4,7 +4,7 @@ id: TN0043
 tags: [architecture-patterns]
 ---
 
-One of the advantages of using GraphQL is it provides an abstraction between the consumers of the graph and 
+One of the advantages of using GraphQL is that it provides an abstraction between the consumers of the graph and 
 the teams maintaining the backend services. 
 
 Using an example architecture where each application has a BFF and that BFF connects to a number of backend services, the number of 
